# youtube-notificator

./: app.py  docker-compose.yaml  pyproject.toml
bot_service/: Dockerfile  config.py
bot_service/presentation/bot/: __init__.py  bot_routers.py  webhook_routers.py
src/: Dockerfile  main.py
src/application/authentication/: authentication_form.py
src/application/routers/: authors.py  users.py  videos.py
src/domain/authors/: models.py  utils.py
src/domain/subscriptions/: models.py
src/domain/users/: authentication.py  models.py
src/domain/videos/: models.py
src/infra/application/: factory.py
src/infra/database/: alembic.ini  pydantic_models.py  repository.py  session.py  tables.py  uow.py
src/infra/database/migrations/: env.py
src/logic/authentication/: authentication.py
src/logic/commands/: authors_logic.py  users_logic.py  videos_logic.py  youtube_logic.py
src/logic/kafka/subscription_logic/consumers/: notification_consumer.py  subscription_consumer.py
src/logic/kafka/subscription_logic/producers/: notification_producer.py  subscription_producer.py
src/logic/kafka/video_notification_logic/consumers/: video_notification_consumer.py
src/logic/kafka/video_notification_logic/producers/: video_notification_producer.py
src/settings/: config.py
